# open-gl

./: CMakeLists.txt  README.md  main.cpp
Include/glad/: glad.h
Libs/glad/: glad.c
Shaders/: color_1_frag.glsl  color_1_frag_light.glsl  color_1_vec.glsl  fragmentShaderSource.glsl
Utilities/: Camera.h  Shader.cpp  Shader.h  VertexData.h  VertexUtility.cpp  VertexUtility.h
